--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #215f3d;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #46638a;
+  --ifm-color-primary-dark: #295b78;
+  --ifm-color-primary-darker: #276271;
+  --ifm-color-primary-darkest: #20365d;
+  --ifm-color-primary-light: #335c92;
+  --ifm-color-primary-lighter: #355599;
+  --ifm-color-primary-lightest: #3c69ad;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
