website: Add mesh animation to banner
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -14,6 +14,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-color: #263740;
 }
 
 @media screen and (max-width: 996px) {
